# HaackStation

./: .gitignore  CMakeLists.txt  HAACKSTATION_ROADMAP-v36.md  HANDOFF_SESSION36.md  README.md  build_setup.sh  fix_includes.sh  setup.sh
audio/: CMakeLists.txt
audio/include/: audio_replacer.h
audio/src/: audio_replacer.cpp
docs/: HaackStation_Day3_Addendum.docx  HaackStation_DevDiary.docx  HaackStation_DevDiary_Complete.docx  HaackStation_DevDiary_v3.docx
frontend/: CMakeLists.txt
frontend/include/: ambient_music.h  app.h  chd_converter.h  disc_memory.h  favorites.h  game_details_panel.h  game_scraper.h  ingame_menu.h  memcard_manager.h  per_game_settings.h  per_game_settings_screen.h  play_history.h  ra_manager.h  rewind_manager.h  save_state_manager.h  scrape_screen.h  settings_manager.h  version.h.in
frontend/include/core_bridge/: libretro_bridge.h  libretro_types.h
frontend/include/renderer/: theme_engine.h
frontend/include/ui/: controller_nav.h  game_browser.h  haack_hub.h  input_map.h  omnisave_card_shelf.h  omnisave_import.h  omnisave_vault.h  onscreen_keyboard.h  remap_screen.h  settings_screen.h  splash_screen.h  trophy_hub.h  trophy_room.h
frontend/src/: ambient_music.cpp  app.cpp  chd_converter.cpp  game_details_panel.cpp  game_scraper.cpp  ingame_menu.cpp  main.cpp  memcard_manager.cpp  per_game_settings.cpp  per_game_settings_screen.cpp  play_history.cpp  ra_manager.cpp  rewind_manager.cpp  save_state_manager.cpp  scrape_screen.cpp  settings_manager.cpp
frontend/src/core_bridge/: libretro_bridge.cpp
frontend/src/renderer/: theme_engine.cpp
frontend/src/ui/: controller_nav.cpp  game_browser.cpp  haack_hub.cpp  input_map.cpp  omnisave_card_shelf.cpp  omnisave_import.cpp  omnisave_vault.cpp  omnisave_vault.h  onscreen_keyboard.cpp  remap_screen.cpp  settings_screen.cpp  splash_screen.cpp  trophy_hub.cpp  trophy_room.cpp
shaders/: CMakeLists.txt
shaders/include/: shader_manager.h
shaders/src/: shader_manager.cpp
textures/: CMakeLists.txt
textures/include/: texture_replacer.h
textures/src/: texture_replacer.cpp
